--- a/nav/nav.html
+++ b/nav/nav.html
@@ -11,25 +11,26 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <!-- Latest Bootstrap JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <title>Nav</title>
     </head>
     <body>
         <!--HTML code here-->
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <!-- Brand/logo -->
-            <a class="navbar-brand" href="#">Logo</a>
-            
-            <!-- Links -->
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link 3</a>
-              </li>
+                <!-- Brand -->
+                <a class="navbar-brand" href="#"><img src="../images/LEARN_HTML_free-file.png" height="50"></a>
+                <!-- Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        Basic HTML
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Lesson 1</a>
+                        <a class="dropdown-item" href="#">Lesson 2</a>
+                        <a class="dropdown-item" href="#">Lesson 3</a>
+                    </div>
+                </li>
             </ul>
-          </nav>
+        </nav>
     </body>
 </html>
