--- a/go/index.html
+++ b/go/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="../go/images/LEARN_HTML_free-file.ico" rel="icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Latest bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -14,6 +15,6 @@
     </head>
     <body>
         <!--HTML code here-->
-            
+        
     </body>
 </html>
