--- a/go/index.html
+++ b/go/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="css/style.css" rel="stylesheet">
         <link href="../go/images/LEARN_HTML_free-file.ico" rel="icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Latest bootstrap CSS -->
@@ -15,6 +16,12 @@
     </head>
     <body>
         <!--HTML code here-->
-        
+        <div class="container">
+            <div class="jumbotron">
+                <h1>
+                    Learn@HTML
+                </h1>
+            </div>
+        </div>
     </body>
 </html>
