--- a/go/index.html
+++ b/go/index.html
@@ -18,7 +18,8 @@
         <!--HTML code here-->
         <div class="container">
             <div class="jumbotron">
-                <h1>
+                <h1 id="title">
+                    <img src="" alt="">
                     Learn@HTML
                 </h1>
             </div>
