--- a/go/index.html
+++ b/go/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="jumbotron">
                 <h1 id="title">
-                    <img src="" alt="">
+                    <img src="../go/images/LEARN_HTML_free-file.png" alt="">
                     Learn@HTML
                 </h1>
             </div>
