--- a/go/Part 1 - Intro/index.html
+++ b/go/Part 1 - Intro/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="../css/style.css" rel="stylesheet">
+        <link href="../../go/images/LEARN_HTML_free-file.ico" rel="icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Latest bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -14,6 +16,13 @@
     </head>
     <body>
         <!--HTML code here-->
-
+        <div class="container">
+            <div class="jumbotron">
+                <h1 id="title">
+                    <img src="../go/images/LEARN_HTML_free-file.png" alt="">
+                    Learn@HTML
+                </h1>
+            </div>
+        </div>
     </body>
 </html>
