--- a/go/Part 1 - Intro/index.html
+++ b/go/Part 1 - Intro/index.html
@@ -23,6 +23,9 @@
                     Learn@HTML
                 </h1>
             </div>
+            <div class="row">
+                div.
+            </div>
         </div>
     </body>
 </html>
