--- a/go/Part 1 - Intro/index.html
+++ b/go/Part 1 - Intro/index.html
@@ -24,7 +24,7 @@
                 </h1>
             </div>
             <div class="row">
-                div.
+                div.col-md-
             </div>
         </div>
     </body>
