--- a/go/Part 1 - Intro/index.html
+++ b/go/Part 1 - Intro/index.html
@@ -24,7 +24,14 @@
                 </h1>
             </div>
             <div class="row">
-                div.col-md-
+                <div class="col-md-6">
+                    <div class="VIDEO">
+                        VIDEO
+                    </div>
+                    <div class="col-md-6">
+                        
+                    </div>
+                </div>
             </div>
         </div>
     </body>
