--- a/go/index.html
+++ b/go/index.html
@@ -19,7 +19,9 @@
         <div class="container">
             <div class="jumbotron">
                 <h1 id="title">
-                    <img src="../go/images/LEARN_HTML_free-file.png" alt="">
+                    <img src="../
+                    
+                    go/images/LEARN_HTML_free-file.png" alt="">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Learn@HTML
                 </h1>
             </div>
