--- a/go/index.html
+++ b/go/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Learn@html </title>
         <meta charset="UTF-8">
         <link href="css/style.css" rel="stylesheet">
         <link href="../go/images/LEARN_HTML_free-file.ico" rel="icon">
